--- a/.github/workflows/poc-export-variable.yml
+++ b/.github/workflows/poc-export-variable.yml
@@ -28,6 +28,7 @@ jobs:
       
   example_job2:
     runs-on: ubuntu-latest
+    needs: example_job1
     steps:
       - name: Step 1 - Use From example_job1
         run: |
