--- a/.github/workflows/poc-multiple-feature-branches-in-nightly.yml
+++ b/.github/workflows/poc-multiple-feature-branches-in-nightly.yml
@@ -2,8 +2,8 @@ name: nightly build for all present feature branches
 
 on:
   schedule:
-    - cron: '50 10 * * *'  # Runs every day at 16:15 IST (10:45 UTC)
-  workflow_dispatch:  # Allows manual trigger
+    - cron: '55 11 * * *'
+  workflow_dispatch:
 
 jobs:
   build:
@@ -14,4 +14,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Display test.txt content
-        run: cat test.txt
+        run:
+          date
+          cat test.txt
