--- a/.github/workflows/poc-multiple-feature-branches-in-nightly.yml
+++ b/.github/workflows/poc-multiple-feature-branches-in-nightly.yml
@@ -2,7 +2,7 @@ name: Nightly Build for All Present Feature Branches
 
 on:
   schedule:
-    - cron: '55 11 * * *'
+    - cron: '57 11 * * *'
   workflow_dispatch:
 
 jobs:
@@ -17,7 +17,7 @@ jobs:
       - name: Get feature branches
         id: get-branches
         run: |
-          BRANCHES=$(git ls-remote --heads origin | awk -F'/' '{print $3}' | grep '^feature-' | jq -R -s -c 'split("\n")[:-1]')
+          BRANCHES=$(git ls-remote --heads origin | awk -F'/' '{print $3}' | grep '^main' | jq -R -s -c 'split("\n")[:-1]')
           echo "branches=$BRANCHES" >> $GITHUB_ENV
           echo "::set-output name=branches::$BRANCHES"
 
