--- a/.github/workflows/poc-nightly-build-feature-branches.yml
+++ b/.github/workflows/poc-nightly-build-feature-branches.yml
@@ -18,6 +18,7 @@ jobs:
         id: get-feature-branches
         run: |
           FEATURE_BRANCHES=$(git ls-remote --heads origin | awk -F'/' '{print $3}' | grep -E '^feature-' | jq -R -s -c 'split("\n")[:-1]')
+          echo "current_feature_branches=$FEATURE_BRANCHES"
           echo "feature_branches=$FEATURE_BRANCHES" >> $GITHUB_ENV
           echo "::set-output name=feature_branches::$FEATURE_BRANCHES"
 
