--- a/.github/workflows/poc-echo-shell2.yml
+++ b/.github/workflows/poc-echo-shell2.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Run Shell Script
       run: |
         chmod +x ./var.sh
-        ./var.sh
+        source ./var.sh
 
         echo "echo-in-yaml=$MY_VARIABLE"
         chmod +x ./var1.sh
