--- a/.github/workflows/poc-shell-export.yml
+++ b/.github/workflows/poc-shell-export.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Run Shell Script
       run: |
         chmod +x ./var.sh
-        ./var.sh
+        source ./var.sh
 
     - name: Echo var
       run: |
