--- a/.github/workflows/poc-nightly-build-feature-branches.yml
+++ b/.github/workflows/poc-nightly-build-feature-branches.yml
@@ -1,8 +1,8 @@
 name: Nightly Build for Feature Branches
 
 on:
-  schedule:
-    - cron: '50 12 * * *'
+  #schedule:
+  #  - cron: '50 12 * * *'
   workflow_dispatch:
 
 jobs:
