--- a/.github/workflows/poc-jf-cmd-test.yml
+++ b/.github/workflows/poc-jf-cmd-test.yml
@@ -29,7 +29,7 @@ jobs:
             --url=$JF_URL \
             --user=$JF_USER \
             --password=$JF_PASSWORD \
-            --interactive=false
+            --interactive=false \
             --default=true
 
       - name: Upload ZIP to Artifactory
