--- a/.github/workflows/poc-jf-cmd-test.yml
+++ b/.github/workflows/poc-jf-cmd-test.yml
@@ -12,7 +12,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup JFrog CLI
-        uses: jfrog/setup-jfrog-cli@v4.5.6
+        #uses: jfrog/setup-jfrog-cli@v4.5.6
+        uses: actions/checkout@v2
         
       - name: Create text file and zip
         run: |
@@ -31,7 +32,9 @@ jobs:
             --password=$JF_PASSWORD \
             --interactive=false \
             --default=true
-
+      
+      - name: Verify Config 
+        run: |
           jf config show
 
       - name: Upload ZIP to Artifactory
