--- a/.github/workflows/poc-jf-cmd-test.yml
+++ b/.github/workflows/poc-jf-cmd-test.yml
@@ -11,9 +11,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup JFrog CLI
-        #uses: jfrog/setup-jfrog-cli@v4.5.6
-        uses: actions/checkout@v2
+      - name: Set up JFrog CLI
+        uses: jfrog/setup-jfrog-cli@v4
+        with:
+          version: latest
         
       - name: Create text file and zip
         run: |
