--- a/.github/workflows/poc-jf-cmd-test.yml
+++ b/.github/workflows/poc-jf-cmd-test.yml
@@ -28,9 +28,9 @@ jobs:
           JF_PASSWORD: ${{ secrets.JFROG_PASSWORD }}
         run: |
           jf config add matrix-artifactory \
-            --artifactory-url=$JF_URL \
-            --user=$JF_USER \
-            --password=$JF_PASSWORD \
+            --artifactory-url="$JF_URL" \
+            --user="$JF_USER" \
+            --password="$JF_PASSWORD" \
             --interactive=false \
             --default=true
       
