--- a/.github/workflows/poc-jf-cmd-test.yml
+++ b/.github/workflows/poc-jf-cmd-test.yml
@@ -21,16 +21,16 @@ jobs:
           echo "This is a test file." > testfile.txt
           zip testfile.zip testfile.txt
 
+      - name: Remove Config
+        run: |
+          jf config remove matrix-artifactory --quiet || echo "No existing config to remove"
+        
       - name: Configure JFrog CLI
-        env:
-          JF_URL: ${{ vars.JFROG_URL }}
-          JF_USER: ${{ secrets.JFROG_USER }}
-          JF_PASSWORD: ${{ secrets.JFROG_PASSWORD }}
         run: |
           jf config add matrix-artifactory \
-            --artifactory-url="$JF_URL" \
-            --user="$JF_USER" \
-            --password="$JF_PASSWORD" \
+            --artifactory-url="${{ vars.JFROG_URL }}" \
+            --user="${{ secrets.JFROG_USER }}" \
+            --password="${{ secrets.JFROG_PASSWORD }}" \
             --interactive=false \
             --default=true
       
