--- a/.github/workflows/poc-jf-cmd-test.yml
+++ b/.github/workflows/poc-jf-cmd-test.yml
@@ -32,6 +32,7 @@ jobs:
             --user="${{ secrets.JFROG_USER }}" \
             --password="${{ secrets.JFROG_PASSWORD }}" \
             --interactive=false \
+            --default=true \
             --insecure-tls=true
       
       - name: Verify Config 
